# Audio-Freelance

./: .env.example  .gitignore  .pre-commit-config.yaml  BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  OUTREACH_BUILD_SPEC.md  OUTREACH_REVIEW.md  OUTREACH_RUNBOOK.md  README.md  SECURITY.md  activate.bat  activate.ps1  activate.sh  config.py  docker-compose.prod.yml  docker-compose.yml  fly.toml  main.py  package.json  pnpm-lock.yaml  profile.yaml  pyproject.toml  run.bat  run.py  run.sh  tsconfig.base.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml
api/: auth.py  metrics.py  routes.py
assets/: registry.py
config/: claims.json  ingest.json
data/: companies.yaml
debug/: diagnostics.py  log.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/e2e/: dashboard.spec.ts
frontend/public/screenshots/: README.md
frontend/src/app/: error.tsx  first-boot.tsx  layout.tsx  loading.tsx  page.tsx
frontend/src/app/cold-leads/: loading.tsx  page.tsx
frontend/src/app/leads/: loading.tsx  page.tsx
frontend/src/app/market/: loading.tsx  page.tsx
frontend/src/app/opportunities/: page.tsx
frontend/src/app/preferences/: error.tsx  page.tsx
frontend/src/app/setup/: page.tsx
frontend/src/app/tracking/: loading.tsx  page.tsx
frontend/src/components/: app-shell.tsx  audio-vis.tsx  lead-detail-sheet.tsx
frontend/src/lib/: api.ts  outreach-db.ts
generate/: __init__.py  outreach.py  proposal.py  rate.py  translate.py  triage.py
graph/: pipeline.py  state.py
inbox/: README.md
leads/: __init__.py  schema.py  store.py  tracking.py
research/: market.py
research/sources/: __init__.py
scoring/: __init__.py  profile.py  profile_score.py  score.py  signals.py
scripts/: backup.sh  check_followups.sh  check_integrity.sh  evening_triage.sh  friday_ritual.sh  midday_check.sh  morning_ritual.sh  outreach-dry-run.mjs  purge_test_leads.py  rotate_cold_leads.py  seed.py
search/: __init__.py  ats.py  base.py  fetch.py  tier1.py  tier2.py  tier3.py  tier4.py  tier5.py
tests/: conftest.py  test_api.py  test_contact_dedup.py  test_diagnostics.py  test_market.py  test_pipeline_graph.py  test_score.py  test_search.py  test_signals.py
